<resources>
    <string name="app_name">Speed Test App</string>
    <string name="title_test">Speed Test</string>
    <string name="title_settings">Settings</string>
    <string name="start_speed_test">Начать тест скорости</string>
    <string name="upload_text_view">Отдача</string>
    <string name="download_text_view">Загрузка</string>
    <string name="speed_text_view">МБит/c</string>
    <string name="inst_text_view">Мгновенная скорость</string>
    <string name="average_text_view">Средняя скорость</string>
    <string name="error_connection">Ошибка соединения</string>
    <string name="success_download">Тест загрузки завершен успешно</string>
    <string name="success_upload">Тест отдачи завершен успешно</string>
    <string name="message_connection_pending">Устанавливаем соединение c сервером отдачи…Это может занять до 30 сек. После этого тест будет автоматически прекращен.</string>
    <string name="message_connection_pending_download">Устанавливаем соединение c сервером загрузки…</string>
    <string name="error_choose_settings">Выберите тип соединения, которое вы хотите проверить!</string>
    <string name="theme">Тема</string>
</resources>